// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Search/SearchButton LookupInFlightAndNoPlateIdPresent smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="jumbotron">
        <div class="row">
          <form class="form">
            <div class="form-row">
              <div class="col-md">
                <div class="form-group">
                  <button class="form-control btn btn-primary"
                          disabled
                          role="button"
                          type="submit"
                          value="Search"
                  >
                    <span class="spinner-border spinner-border-sm"
                          role="status"
                          aria-hidden="true"
                    >
                    </span>
                    &nbsp;&nbsp;Searching...
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Search/SearchButton NoLookupInFlightAndNoPlateIdPresent smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="jumbotron">
        <div class="row">
          <form class="form">
            <div class="form-row">
              <div class="col-md">
                <div class="form-group">
                  <button class="form-control btn btn-primary"
                          disabled
                          role="button"
                          type="submit"
                          value="Search"
                  >
                    Search
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Search/SearchButton PlateIdPresentAndLookupInFlight smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="jumbotron">
        <div class="row">
          <form class="form">
            <div class="form-row">
              <div class="col-md">
                <div class="form-group">
                  <button class="form-control btn btn-primary"
                          disabled
                          role="button"
                          type="submit"
                          value="Search"
                  >
                    <span class="spinner-border spinner-border-sm"
                          role="status"
                          aria-hidden="true"
                    >
                    </span>
                    &nbsp;&nbsp;Searching...
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Search/SearchButton PlateIdPresentAndNoLookupInFlight smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="jumbotron">
        <div class="row">
          <form class="form">
            <div class="form-row">
              <div class="col-md">
                <div class="form-group">
                  <button class="form-control btn btn-primary"
                          role="button"
                          type="submit"
                          value="Search"
                  >
                    Search
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
